# ir-tracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.ja.md  README.md  pyproject.toml
docs/design/: analysis.md  architecture.md  segmentation.md
ir_tracker/: __init__.py  analyzer.py  cli.py  export_html.py  ingest.py  segmenter.py  storage.py  timeline.py  translator.py  web.py
ir_tracker/static/: style.css
ir_tracker/templates/: base.html  segments.html  timeline.html
tests/: test_analyzer.py  test_ingest.py  test_segmenter.py  test_storage.py  test_translator.py
tests/fixtures/: sample_export.json
